Use QDir::isAbsolutePath instead of KUrl::isRelativeUrl. The use case is different and doesn't fit isRelativeUrl.

BUG: 174864

svn path=/trunk/KDE/kdelibs/; revision=883396